fix bugs in training and testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,20 @@ imageio
 torch
 torchvision
 toml
+
+glob2
+pillow
+scikit-learn
+scikit-image
+scikit-video
+opencv-python
+
+humanize
+seaborn
+terminaltables
+tabulate
+h5py
+open3d-python
+trimesh
+matplotlib
+graphviz
