--- a/options.toml
+++ b/options.toml
@@ -4,8 +4,8 @@ title = "TOML Example"
 usecudnn = true
 usecudnnbenchmark = true
 gpuid = 0
-loadpretrainedmodel = false
-pretrainedmodelpath = "trainedmodel.pt"
+loadpretrainedmodel = true
+pretrainedmodelpath = "/file3/xinshuo/data/models/resnet_LSTM_lipreading/trained_model_20181129_05h51m12s/trained_model_epoch001.pt"
 savemodel = true
 #modelsavedir = "/media/xinshuo/Data/models/resnet_LSTM_lipreading"
 modelsavedir = "/file3/xinshuo/data/models/resnet_LSTM_lipreading"
@@ -17,19 +17,21 @@ dataset = "/file3/xinshuo/data/datasets/LRD/LRW/lipread_mp4"
 num_frames = 29
 
 [input]
-batchsize = 32
-numworkers = 32
+#batchsize = 32
+batchsize = 2
+#numworkers = 32
+numworkers = 2
 
 [model]
-type = "temp-conv"
-#type = "LSTM"
+#type = "temp-conv"
+type = "LSTM"
 inputdim = 256
 hiddendim = 256
 numclasses = 500
 numlstms = 2
 
 [training]
-train = true
+train = false
 startepoch = 0
 endepoch = 15
 statsfrequency = 10
@@ -39,7 +41,7 @@ weightdecay = 0.0003
 shuffle = true
 
 [validation]
-validate = false
+validate = true
 saveaccuracy = true
 
 [testing]
